compiler-for-c-minus/src/sample/test2.c
int foo(int a, int b)
{
	int x, y;
	x = 10;
	int temp; // error: var_declaration shouldn't be here
}
